# Cortana

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  IDENTITY.md  OAUTH_COMPLETE_FLOW.md  OAUTH_IMPLEMENTATION.md  OAUTH_TOKEN_REFRESH.md  README.md  SOUL.md  TOOLS.md  USER.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: docker-publish.yml
.jules/: bolt.md
src/: agent.py  config.py  conversation_cache.py  cortana_agent.py  cortana_context.py  database.py  main.py  memory.py  models.py  oauth_handler.py  rotator_client.py  scheduler.py  skills.py  tooling.py  tools.py
src/assistant_bot/: __init__.py  bot.py  config.py  conversation_manager.py  llm_adapter.py  memu_client.py
src/assistant_bot/handlers/: __init__.py  message_handler.py
src/assistant_bot/utils/: token_counter.py
src/providers/: __init__.py  anthropic.py  base.py  google.py  oauth.py  openai.py
tests/: test_coding_tools.py  test_conversation_cache.py  test_conversation_manager.py  test_exa.py  test_fetch.py  test_models.py  test_new_agent.py  test_reminders.py  test_rotator_integration.py  test_skills.py  verify_flow.py
