[project]
name = "cortana-discord-assistant"
version = "0.1.0"
description = "Discord AI assistant bot integrating MemU memory with OpenRouter via PydanticAI"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.6.4",
    "httpx==0.28.1",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pydantic-ai-slim>=1.9.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
memu = [
    "memu-py>=0.1.8",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
