[project]
name = "cortana-discord-assistant"
version = "0.1.0"
description = "Discord AI assistant bot integrating MemU memory with Google Gemini via PydanticAI"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
